--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -34,7 +34,7 @@
                                 <td rowspan="{{ rowspan }}" style="text-align:center;">[{{ att.report.exam.examId }}]</td>
 
                                 <!-- Course Details -->
-                                <td style="border-bottom:none;">
+                                <td rowspan="{{ rowspan }}" style="border-bottom:none;">
                                     <table style="border-collapse: collapse;">
                                         <tr>
                                             <td style="font-weight:bold;">Course Name</td>
@@ -64,7 +64,7 @@
                                 </td>
 
                                 <!-- Exam Details -->
-                                <td style="border-bottom:none;">
+                                <td rowspan="{{ rowspan }}" style="border-bottom:none;">
                                     <table style="border-collapse: collapse;">
                                         <tr>
                                             <td style="font-weight:bold;">Exam Date</td>
