--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -34,56 +34,56 @@
                                 <td rowspan="{{ rowspan }}">[{{ att.report.exam.examId }}]</td>
                             
                                 <!-- Course Details -->
-                                <td style="border-bottom:none;">
+                                <td rowspan="{{ rowspan }}">
                                     <table style="border-collapse: collapse;">
                                         <tr>
-                                            <td style="font-weight:bold;">Course Name</td>
+                                            <td class="standard_data">Course Name</td>
                                             <td>: {{ att.report.exam.course.courseName }}</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Course Code/Section</td>
+                                            <td class="standard_data">Course Code/Section</td>
                                             <td>: {{ att.report.exam.course.courseCodeSection }}</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Program Code</td>
+                                            <td class="standard_data">Program Code</td>
                                             <td>: {{ att.report.exam.course.courseDepartment }}</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Number of Students</td>
+                                            <td class="standard_data">Number of Students</td>
                                             <td>: {{ att.report.exam.course.courseStudent }}</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Practical Lecturer</td>
+                                            <td class="standard_data">Practical Lecturer</td>
                                             <td>: {{ att.report.exam.course.practicalLecturer.userName }}</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Tutorial Lecturer </td>
+                                            <td class="standard_data">Tutorial Lecturer </td>
                                             <td>: {{ att.report.exam.course.tutorialLecturer.userName }} </td>
                                         </tr>
                                     </table>
                                 </td>
 
                                 <!-- Exam Details -->
-                                <td style="border-bottom:none;">
+                                <td rowspan="{{ rowspan }}">
                                     <table style="border-collapse: collapse;">
                                         <tr>
-                                            <td style="font-weight:bold;">Exam Date</td>
+                                            <td class="standard_data">Exam Date</td>
                                             <td>: [{{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }}] - [{{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }}]</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Exam Day</td>
+                                            <td class="standard_data">Exam Day</td>
                                             <td>: [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}]</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Exam Time</td>
+                                            <td class="standard_data">Exam Time</td>
                                             <td>: [{{ att.report.exam.examStartTime.strftime("%H:%M") }}] - [{{ att.report.exam.examEndTime.strftime("%H:%M") }}]</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Exam Period</td>
+                                            <td class="standard_data">Exam Period</td>
                                             <td>: [{{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h - {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 60) // 3600 }}m]</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Exam Venue</td>
+                                            <td class="standard_data">Exam Venue</td>
                                             <td>: [{{ att.report.exam.examNoInvigilator }}]</td>
                                         </tr>
                                     </table>
