--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -24,20 +24,27 @@
             <button type="submit">Upload/Add New Lecturer Timetable</button>
         </div>
         
-        {% if needs_auth %}
-        <p>You need to connect to Google Drive first.</p>
-        <a href="{{ url_for('authorize') }}">
-            <button>Connect to Google Drive</button>
-        </a>
-        {% else %}
-        <h3>Files from SOC folder:</h3>
-        <ul>
-        {% for f in files %}
-            <li><a href="{{ f.webViewLink }}" target="_blank">{{ f.name }}</a></li>
-        {% endfor %}
-        </ul>
-        {% endif %}
     </form>
+
+    {% if needs_auth %}
+        <div class="google-drive-connect">
+            <p>You need to connect to Google Drive first.</p>
+            <a href="{{ url_for('authorize') }}">
+                <button type="button">Connect to Google Drive</button>
+            </a>
+        </div>
+    {% else %}
+        <h3>Files from SOC folder:</h3>
+        {% if files %}
+            <ul>
+            {% for f in files %}
+                <li><a href="{{ f.webViewLink }}" target="_blank">{{ f.name }}</a></li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <p>No files found in SOC folder.</p>
+        {% endif %}
+    {% endif %}
 
     
 
