--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -4,6 +4,23 @@
 {% block content %}
 <div class="menu-section">
     <h2>Upload Lecturer Timetable</h2>
+
+    <iframe
+    id="gdrive-folder"
+    src="https://www.labnol.org/embed/drive/folder/1i4MFaRbrrJhhGmtBYyC9SWSH5tF6LvvF"
+    width="100%"
+    height="600"
+    frameborder="0"
+    allowfullscreen>    
+    </iframe>
+
+    <script>
+        setInterval(() => {
+            const iframe = document.getElementById("gdrive-folder");
+            iframe.src = iframe.src;
+        }, 5 * 60 * 1000); // every 5 minutes
+    </script>
+
     <form id="uploadTimetableForm" action="{{ url_for('admin_manageTimetable') }}" method="POST" enctype="multipart/form-data">
         <label for="timetable_list">
             <div class="upload-container" id="timetableUploadContainer">
