--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -6,12 +6,12 @@
     <h2>Upload Lecturer Timetable</h2>
 
     <iframe
-    id="gdrive-folder"
-    src="https://www.labnol.org/embed/drive/folder/1i4MFaRbrrJhhGmtBYyC9SWSH5tF6LvvF"
-    width="100%"
-    height="600"
-    frameborder="0"
-    allowfullscreen>    
+        id="gdrive-folder"
+        src="https://drive.google.com/drive/folders/1i4MFaRbrrJhhGmtBYyC9SWSH5tF6LvvF?usp=sharing"
+        width="100%"
+        height="600"
+        frameborder="0"
+        allowfullscreen>    
     </iframe>
 
     <script>
