--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -5,21 +5,20 @@
 <div class="menu-section">
     <h2>Upload Lecturer Timetable</h2>
 
-    <iframe
+    <iframe 
         id="gdrive-folder"
-        src="https://drive.google.com/drive/folders/1i4MFaRbrrJhhGmtBYyC9SWSH5tF6LvvF?usp=sharing"
-        width="100%"
-        height="600"
-        frameborder="0"
-        allowfullscreen>    
+        src="https://drive.google.com/embeddedfolderview?id=1i4MFaRbrrJhhGmtBYyC9SWSH5tF6LvvF#grid"
+        style="width:100%; height:600px; border:0;">
     </iframe>
 
     <script>
         setInterval(() => {
             const iframe = document.getElementById("gdrive-folder");
-            iframe.src = iframe.src;
+            // Add timestamp to avoid cache
+            iframe.src = "https://drive.google.com/embeddedfolderview?id=1i4MFaRbrrJhhGmtBYyC9SWSH5tF6LvvF#grid&t=" + new Date().getTime();
         }, 5 * 60 * 1000); // every 5 minutes
     </script>
+
 
     <form id="uploadTimetableForm" action="{{ url_for('admin_manageTimetable') }}" method="POST" enctype="multipart/form-data">
         <label for="timetable_list">
