--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -1,24 +1,26 @@
-<!-- upload.html -->    
 {% extends "admin/adminBase.html" %}
 {% block title %}Admin ManageTimetable{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h2>Manage Lecturer Timetable</h2>
+    <h2>Manage Lecturer Timetable</h2>  
+
+    <div class="button-wrapper">
+        <button type="button" id="refresh-btn">
+            <i class="fas fa-rotate"></i>
+            Refresh Timetable
+        </button>
+    </div>
+
+    <!-- flash message -->
+    <div class="alert alert-success" id="flash-message" style="display: none;"></div>
+    <br>
+
     <form>
-        <iframe 
+        <iframe     
+            id="gdrive-folder"
             src="https://drive.google.com/embeddedfolderview?id=1i4MFaRbrrJhhGmtBYyC9SWSH5tF6LvvF#grid"
             style="width:100%; height:600px; border:0;">
         </iframe>
-
-        <script>
-            setInterval(() => {
-                const iframe = document.getElementById("gdrive-folder");
-                // Add timestamp to avoid cache
-                iframe.src = "https://drive.google.com/embeddedfolderview?id=1i4MFaRbrrJhhGmtBYyC9SWSH5tF6LvvF#grid&t=" + new Date().getTime();
-            }, 0 * 10 * 1000); // every 5 minutes
-        </script>
     </form>
 </div>
-
-
 {% endblock %}
