--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -472,7 +472,7 @@ input, select{
     font-size: 1.1rem;
     border: none;
     border-radius: 6px;
-    background-color: #007bff;
+    background-color: #27A2DB;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
