--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -17,7 +17,7 @@
         <h3>PDF Files from SOC Folder:</h3>
         <ul>
             {% for file in files %}
-                <li><a href="{{ file.webViewLink }}" target="_blank">{{ loop.index }} {{ file.name }}</a></li>
+                <li><a href="{{ file.webViewLink }}" target="_blank">{{ loop.index }}. {{ file.name }}</a></li>
             {% endfor %}
         </ul>
     {% endif %}
