--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -5,22 +5,27 @@
 <div class="menu-section">
     <h2>Manage Timetable</h2>
 
-    {% if not files %}
-        {% if not authorized %}
-            <a href="{{ url_for('authorize') }}" class="btn btn-primary">Authorize Google Drive</a>
-        {% else %}
-            <a href="{{ url_for('fetch_drive_files') }}" class="btn btn-success">Load Drive Files</a>
+    <form>
+        {% if not files %}
+            {% if not authorized %}
+                <a href="{{ url_for('authorize') }}" class="btn btn-primary">Authorize Google Drive</a>
+            {% else %}
+                <a href="{{ url_for('fetch_drive_files') }}" class="btn btn-success">Load Drive Files</a>
+            {% endif %}
         {% endif %}
-    {% endif %}
 
-    {% if files %}
-        <h3>PDF Files from SOC Folder:</h3>
-        <ul>
-            {% for file in files %}
-                <li><a href="{{ file.webViewLink }}" target="_blank">{{ loop.index }}. {{ file.name }}</a></li>
-            {% endfor %}
-        </ul>
-    {% endif %}
+        {% if files %}
+            <h3>PDF Files from SOC Folder:</h3>
+            <ul>
+                {% for file in files %}
+                    <li><a href="{{ file.webViewLink }}" target="_blank">{{ loop.index }}. {{ file.name }}</a></li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    </form>
+
+
+
 
 </div>
 {% endblock %}
