--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -5,7 +5,7 @@
 <div class="menu-section">
     <h2>Manage Timetable</h2>
 
-    <form>
+    <form style="max-height: 500px; overflow-y: auto;">
         {% if not files %}
             {% if not authorized %}
                 <a href="{{ url_for('authorize') }}" class="btn btn-primary">Authorize Google Drive</a>
