--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -1,40 +1,38 @@
 {% extends "admin/adminBase.html" %}
 {% block title %}Admin Manage Timetable{% endblock %}
-
 {% block content %}
-<div class="menu-section">
-    <h2>Manage Timetable</h2>
-
-    <form style="max-height: 500px; overflow-y: auto;">
-        {% if get_flashed_messages(with_categories=true) %}
-            {% for category, message in get_flashed_messages(with_categories=true) %}
-                <div class="alert alert-{{ category }}">
-                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
-        <br>
-
-        {% if not files %}
-            {% if not authorized %}
-                <a href="{{ url_for('authorize') }}" class="btn btn-primary">Authorize Google Drive</a>
-            {% else %}
-                <a href="{{ url_for('fetch_drive_files') }}" class="btn btn-success">Load Drive Files</a>
-            {% endif %}
-        {% endif %}
-
-        {% if files %}
-            <h3>PDF Files from SOC Folder:</h3>
-            <ul>
-                {% for file in files %}
-                    <li><a href="{{ file.webViewLink }}" target="_blank">{{ loop.index }}. {{ file.name }}</a></li>
+<div class="menu-grid">
+    <div class="menu-section">
+        <h2>Manage Timetable</h2>
+        <form style="max-height: 500px; overflow-y: auto;">
+            <br>
+            {% if get_flashed_messages(with_categories=true) %}
+                {% for category, message in get_flashed_messages(with_categories=true) %}
+                    <div class="alert alert-{{ category }}">
+                        <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                    </div>
                 {% endfor %}
-            </ul>
-        {% endif %}
+            {% endif %}
+            <br>
 
+            {% if not files %}
+                {% if not authorized %}
+                    <a href="{{ url_for('authorize') }}" class="btn btn-primary">Authorize Google Drive</a>
+                {% else %}
+                    <a href="{{ url_for('fetch_drive_files') }}" class="btn btn-success">Load Drive Files</a>
+                {% endif %}
+            {% endif %}
+            <br>
 
-    </form>
-
+            {% if files %}
+                <h3>PDF Files from SOC Folder:</h3>
+                <ul>
+                    {% for file in files %}
+                        <li><a href="{{ file.webViewLink }}" target="_blank">{{ loop.index }}. {{ file.name }}</a></li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </form>
+    </div>
 </div>
-
 {% endblock %}
