--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -22,17 +22,19 @@
             {% endif %}
         {% endif %}
         <br>
-
-        <div class="menu-grid">
-            {% if files %}
-                <h3>PDF Files from SOC Folder:</h3>
-                <ul>
-                    {% for file in files %}
-                        <li><a href="{{ file.webViewLink }}" target="_blank">{{ loop.index }}. {{ file.name }}</a></li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
-        </div>
+        
+        {% if files %}
+            <h3>PDF Files from SOC Folder:</h3>
+            <div class="menu-grid">
+                {% for file in files %}
+                    <div>
+                        <a href="{{ file.webViewLink }}" target="_blank">
+                            {{ loop.index }}. {{ file.name }}
+                        </a>
+                    </div>
+                {% endfor %}
+            </div>
+{% endif %}
     </form>
 </div>
 {% endblock %}
