--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -5,7 +5,7 @@
     <h2>Manage Timetable</h2>
     <form style="max-height: 500px; overflow-y: auto;">
         <!-- Refresh Button -->
-         <a href="{{ url_for('fetch_drive_files') }}" class="btn btn-warning">Refresh Files</a>
+         <a href="{{ url_for('fetch_drive_files') }}" class="btn btn-warning">Click here to refresh the files from Google Drive</a>
         <br>
 
         {% if not files %}
