--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -39,5 +39,37 @@
         {% endif %}
         <br>
     </form>
+
+    {% if structured %}
+        <h2>{{ structured.title }}</h2>
+        <p><b>Lecturer: </b>{{ structured.lecturer }}</p>
+        <p><b>Time Row: </b>{{ structured.timerow }}</p>
+
+        {% for day, activities in structured.days.items() %}
+            <h4>{{ day }}</h4>
+            <div class="menu-grid">
+                {% for act in activities %}
+                    <div class="activity-card">
+                        <b>Lecturer Name: </b> {{ structured.lecturer }} <br>
+                        <b>Session Type: </b> {{ act.class_type }} <br>
+                        <b>Time: </b> {{ act.time }} <br>
+                        <b>Course Name: </b> {{ act.course }} <br>
+                        <b>Venue: </b> {{ act.room }} <br>
+                        <b>Weeks Effective: </b> {{ act.weeks_range | join(", ") }} <br>
+                        <b>Date Range: </b> {{ act.weeks_date }} <br>
+
+                        {% if act.sections %}
+                            <b>Sections: </b><br>
+                            {% for sec in act.sections %}
+                                {{ sec.intake }} | {{ sec.course_code }} | {{ sec.section }}<br>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
+            <hr>
+        {% endfor %}
+    {% endif %}
+
 </div>
 {% endblock %}
