--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -70,9 +70,11 @@
                 </div>
                 <hr>
             {% endfor %}
-        {% endif %}
+        {% endfor %}
+    {% endif %}
 </div>
 {% endblock %}
+
 
 
 
