--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -44,37 +44,31 @@
 
     <br><br>
     {% if structured %}
-        {% for base_name, timetable in structured.items() %}
-            <h3>{{ base_name }}</h3>
-            {% for day, activities in timetable.days.items() %}
-                <h4>{{ day }}</h4>
-                <div class="menu-grid">
-                    {% for act in activities %}
-                        <div class="activity-card">
-                            <b>Lecturer:</b> {{ timetable.lecturer }} <br>
-                            <b>Session Type:</b> {{ act.class_type }} <br>
-                            <b>Time:            </b> {{ act.time }} <br>
-                            <b>Course Name:     </b> {{ act.course }} <br>
-                            <b>Venue:           </b> {{ act.room }} <br>
-                            <b>Weeks Effective: </b> {{ act.weeks_range | join(", ") }} <br>
-                            <b>Date Range:      </b> {{ act.weeks_date }} <br>
+        {% for day, activities in structured.days.items() %}
+            <h4>{{ day }}</h4>
+            <div class="menu-grid">
+                {% for act in activities %}
+                    <div class="activity-card">
+                        <b>Lecturer Name:   </b> {{ structured.lecturer }} <br>
+                        <b>Session Type:    </b> {{ act.class_type }} <br>
+                        <b>Time:            </b> {{ act.time }} <br>
+                        <b>Course Name:     </b> {{ act.course }} <br>
+                        <b>Venue:           </b> {{ act.room }} <br>
+                        <b>Weeks Effective: </b> {{ act.weeks_range | join(", ") }} <br>
+                        <b>Date Range:      </b> {{ act.weeks_date }} <br>
 
-                            {% if act.sections %}
-                                <b>Sections:    </b><br>
-                                {% for sec in act.sections %}
-                                    {{ sec.intake }} | {{ sec.course_code }} | {{ sec.section }}<br>
-                                {% endfor %}
-                            {% endif %}
-                        </div>
-                    {% endfor %}
-                </div>
-                <hr>
-            {% endfor %}
+                        {% if act.sections %}
+                            <b>Sections:    </b><br>
+                            {% for sec in act.sections %}
+                                {{ sec.intake }} | {{ sec.course_code }} | {{ sec.section }}<br>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
+            <hr>
         {% endfor %}
     {% endif %}
 </div>
 {% endblock %}
-
-
-
 
