--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -43,30 +43,33 @@
     </form>
 
     <br><br>
-    {% if structured %}
-        {% for day, activities in structured.days.items() %}
-            <h4>{{ day }}</h4>
-            <div class="menu-grid">
-                {% for act in activities %}
-                    <div class="activity-card">
-                        <b>Lecturer Name:   </b> {{ structured.lecturer }} <br>
-                        <b>Session Type:    </b> {{ act.class_type }} <br>
-                        <b>Time:            </b> {{ act.time }} <br>
-                        <b>Course Name:     </b> {{ act.course }} <br>
-                        <b>Venue:           </b> {{ act.room }} <br>
-                        <b>Weeks Effective: </b> {{ act.weeks_range | join(", ") }} <br>
-                        <b>Date Range:      </b> {{ act.weeks_date }} <br>
+    {% if structured_timetables %}
+        {% for timetable in structured_timetables %}
+            <h3>{{ timetable.file.name }}</h3>
+            {% for day, activities in timetable.structured_timetable.days.items() %}
+                <h4>{{ day }}</h4>
+                <div class="menu-grid">
+                    {% for act in activities %}
+                        <div class="activity-card">
+                            <b>Lecturer Name:   </b> {{ timetable.structured_timetable.lecturer }} <br>
+                            <b>Session Type:    </b> {{ act.class_type }} <br>
+                            <b>Time:            </b> {{ act.time }} <br>
+                            <b>Course Name:     </b> {{ act.course }} <br>
+                            <b>Venue:           </b> {{ act.room }} <br>
+                            <b>Weeks Effective: </b> {{ act.weeks_range | join(", ") }} <br>
+                            <b>Date Range:      </b> {{ act.weeks_date }} <br>
 
-                        {% if act.sections %}
-                            <b>Sections:    </b><br>
-                            {% for sec in act.sections %}
-                                {{ sec.intake }} | {{ sec.course_code }} | {{ sec.section }}<br>
-                            {% endfor %}
-                        {% endif %}
-                    </div>
-                {% endfor %}
-            </div>
-            <hr>
+                            {% if act.sections %}
+                                <b>Sections:    </b><br>
+                                {% for sec in act.sections %}
+                                    {{ sec.intake }} | {{ sec.course_code }} | {{ sec.section }}<br>
+                                {% endfor %}
+                            {% endif %}
+                        </div>
+                    {% endfor %}
+                </div>
+                <hr>
+            {% endfor %}
         {% endfor %}
     {% endif %}
 </div>
