--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -44,10 +44,12 @@
 
     <br><br>
     {% if structured %}
-        {% for day, activities in structured.days.items() %}
+        {% set days_of_week = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'] %}
+        
+        {% for day in days_of_week %}
             <h4>{{ day }}</h4>
             <div class="menu-grid">
-                {% for act in activities %}
+                {% for act in structured.days[day] %}
                     <div class="activity-card">
                         <b>Lecturer Name:   </b> {{ structured.lecturer }} <br>
                         <b>Session Type:    </b> {{ act.class_type }} <br>
